# river

./: CMakeLists.txt  Grid.hs  Main.cpp  Main.hs  Mercator.hs  River.kmz  ToLocal.hs  doublelatlngs.txt  grid.off  kmllatlngs.txt  outline.csv  river.cabal  riverlatlngs.txt  targets.csv  transformed.off
cmake/: FindLIBIGL.cmake  FindLIM.cmake  FindTRIANGLE.cmake
